tests/expectations/compiler/bugs/b29307_fail.out
Error [ETYC0372117]: Expected u32 but type `(u32, u32)` was found.
    --> compiler-test:7:27
     |
   7 |         let (a, b): u32 = (1u32, 2u32);
     |                           ^^^^^^^^^^^^
